udpate bib files with cleaning and filtering

--- a/bib/PhD_toy.bib
+++ b/bib/PhD_toy.bib
@@ -18,4 +18,20 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/15273396 http://www.sciencemag.org/cgi
 volume = {305},
 year = {2004}
 }
+@article{Ibn-Salem2017,
+abstract = {Paralog genes arise from gene duplication events during evolution, which often lead to similar proteins that cooperate in common pathways and in protein complexes. Consequently, paralogs show correlation in gene expression whereby the mechanisms of co-regulation remain unclear. In eukaryotes, genes are regulated in part by distal enhancer elements through looping interactions with gene promoters. These looping interactions can be measured by genome-wide chromatin conformation capture (Hi-C) experiments, which revealed self-interacting regions called topologically associating domains (TADs). We hypothesize that paralogs share common regulatory mechanisms to enable coordinated expression according to TADs. To test this hypothesis, we integrated paralogy annotations with human gene expression data in diverse tissues, genome-wide enhancer-promoter associations and Hi-C experiments in human, mouse and dog genomes. We show that paralog gene pairs are enriched for co-localization in the same TAD, share more often common enhancer elements than expected and have increased contact frequencies over large genomic distances. Combined, our results indicate that paralogs share common regulatory mechanisms and cluster not only in the linear genome but also in the three-dimensional chromatin architecture. This enables concerted expression of paralogs over diverse cell-types and indicate evolutionary constraints in functional genome organization.},
+author = {Ibn-Salem, Jonas and Muro, Enrique M. and Andrade-Navarro, Miguel A.},
+doi = {10.1093/nar/gkw813},
+file = {:home/ibnsalem/Mendeley/Ibn-Salem, Muro, Andrade-Navarro - 2016 - Co-regulation of paralog genes in the three-dimensional chromatin architecture.pdf:pdf;:home/ibnsalem/Mendeley/Ibn-Salem, Muro, Andrade-Navarro - 2017 - Co-regulation of paralog genes in the three-dimensional chromatin architecture(2).pdf:pdf;:home/ibnsalem/Mendeley/gkw813.pdf:pdf},
+issn = {13624962},
+journal = {Nucleic Acids Research},
+month = {jan},
+number = {1},
+pages = {81--91},
+pmid = {27634932},
+title = {{Co-regulation of paralog genes in the three-dimensional chromatin architecture}},
+url = {https://doi.org/10.1093/nar/gkw813 https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkw813},
+volume = {45},
+year = {2017}
+}
 
