--- a/preamble.tex
+++ b/preamble.tex
@@ -95,4 +95,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % \usepackage{cell} % use cell journal style
+% \usepackage{genres} % use cell journal style
 % \usepackage[backend=bibtex]{biblatex}
