--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -84,7 +84,7 @@ While the first Hi-C study produced genome-wide interactions at 1Mb resolution [
 ## Hierarchy of chromatin 3D structure
 
 The three-dimensonal organization of genome folding was studied extensively in recent years 
-and is reviewd comprehensively by leading expertes in the field [@Pombo2015; @Sexton2015; @Bouwman2015; @Dekker2016; @Dixon2016; @Schmitt2016; @Bonev2016; @Hnisz2016; @Merkenschlager2016; @Long2016; @Ruiz-Velasco2017; @Andrey2017].
+and is reviewd comprehensively by leading expertes in the field [@Pombo2015; @Sexton2015; @Bouwman2015; @Dekker2016; @Dixon2016; @Schmitt2016; @Bonev2016; @Hnisz2016a; @Merkenschlager2016; @Long2016; @Ruiz-Velasco2017; @Andrey2017].
 
 <!-- ---------------------------------------------------------------- -->
 ```{r GenomeHierarchy, fig.cap='(ref:GenomeHierarchy)', out.width='100%', fig.align='center'}
@@ -128,10 +128,7 @@ number of upstream versus downstream interactions of this bin. Using hidden Mark
 Other algorithms compute an insulation score as the extent to which interactions cross potential TAD boundaries [@Crane2015].
 Later the Arrowhead algorithm was introduced to find "contact domains" as smaller nested structures along the diagonal of high resolution Hi-C matrices [@Rao2014].
 Furthermore, when analyzing Hi-C interactions at different length scales, hierarchies of TADs and sub-TADs could be identified that overlap each other [@Filippova2014; @Fraser2015]. 
-The different algorithms and parameters used in each study is only one source of variation 
-in reliably identifying TADs. Also, the resolution of Hi-C maps, which is mainly defined by
-sequencing depths but also the Hi-C protocol itself [@Rao2014], as well as different 
-normalization strategies for Hi-C contacts introduce variability [@Dali2017; @Forcato2017]. 
+The different algorithms and parameters used in each study is only one source of variation in reliably identifying TADs. Also, the resolution of Hi-C maps, which is mainly defined by sequencing depths but also the Hi-C protocol itself [@Rao2014], as well as different normalization strategies for Hi-C contacts introduce variability [@Dali2017; @Forcato2017]. 
 Therefore, the number and size of TADs varies between different studies, making it 
 difficult to compare TADs in different conditions and species across studies. 
 
@@ -143,19 +140,31 @@ Interestingly, TADs might be equivalent to "chromatin domains" of 10 kb - 1 Mb i
 
 The spatial positioning of TADs correlate with many genomic features measured along the
 linear genome [@Merkenschlager2016]. 
-TAD boundaries are enriched for binding of "insulator proteins", such as CTCF in mammals and CP190 in Drosophila [@Dixon2012; @Sexton2012]. Furthermore, TAD boundaries are associated 
-with active chromatin, such as H3K4me3 and H3K27me3, DNase I hypersensitivity, active transcription,
-short interspersed nuclear elements (SINEs),
+TAD boundaries are enriched for binding of "insulator proteins", such as CTCF in mammals and CP190 in Drosophila [@Dixon2012; @Sexton2012]. Furthermore, TAD boundaries are associated  with active chromatin, such as H3K4me3 and H3K27me3, DNase I hypersensitivity, active transcription, short interspersed nuclear elements (SINEs),
 and house-keeping genes [@Dixon2012].
-TADs correspond to regions of early and late replication timing [@Pope2014; @Dileep2015] and lamina associated domains (LADs) [@Dixon2012].
-Importantly, enhancer-promoter interactions seems to be mostly constrained within TADs [@Shen2012; @Ghavi-helm2014; @Symmons2014]
+Furthermroe, TADs correspond to regions of early and late replication timing [@Pope2014; @Dileep2015] and lamina associated domains (LADs) [@Dixon2012].
+Importantly, enhancer-promoter interactions seems to be mostly constrained within TADs [@Shen2012; @Ghavi-helm2014; @Symmons2014] and initial studies report slightly increased co-expression of genes within the same TAD [@Nora2012].
 
 Altogether, there is accumulating evidence that TADs are fundamental units of chromosome organization [@Dixon2016]
 
 
-### Chromatin loops
+### Sub-TAD structures and chromatin loops
 
-Recent studies provide functional insights about how chromatin loops are
+
+Globally, higher-order interactions between different TADs leads to a tree-like hierarchy of TADs and meta-TADs across genomic scales up to the range of entire chromosomes [@Fraser2015].
+Similar than A/B-compartments, these three structures correlate with epigenetic marks and expression changes during cell differentiation [@Fraser2015].
+
+However, TADs can also be divided further into smaller regions with stronger preferential interactions within them, which are often referred to as sub-TADs [@Phillips-Cremins2013]. They might correspond to contact domains which were later identified using high-resolution Hi-C [@Rao2014].
+While sub-TADs display the same self-association features as TADs with decreased contact frequencies across sub-TAD boundaries, sub-TADs seems to be less stable across different cell types and tissues and are stronger related to tissue-specific gene expression [@Berlivet2013; @Phillips-Cremins2013]. 
+Smaller structural units within TADs were also reported from studies CTCF and cohesin mediated interactions using ChiA-PET [@Dowen2014; @Hnisz2016a]
+
+
+- long distnace between regulatory regions and genes in vertebrate genes
+
+To function as a transcriptional regulator,  an enhancer is brought into close spatial proximity with its target promoter through chromatin looping.
+For example, the enhancers of the $\beta$-globin gene interact strongly with its target gene via long-range chromatin contacts in erythroid cells where the $\beta$-globin gene is active but shows little or no interactions in cells from different lineages [@Palstra2003].
+
+Recent studies provide functional insights into how chromatin loops are
 formed and highlight the role of architectural proteins such as CTCF and
 cohesin [@Merkenschlager2016]. CTCF recognizes a specific sequence motif, to which it binds with high affinity [@Kim2007; @Nagy2016]. Interestingly, CTCF motifs are present in convergent orientation at chromatin loop anchors
 [@Rao2014; @Tang2015; @VietriRudan2015]. Furthermore, experimental inversion of the motif results in changes of loop formation and altered gene expression [@Guo2015; @deWit2015].
@@ -167,7 +176,7 @@ orientation [@Sanborn2015; @Fudenberg2016]. According to these models, CTCF bind
 
 In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
 These engage in long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the formation of TADs.
-TADs form cluster by their epigenomic type into A/B compartments and coalescence of compartments in the same chromosome forms chromosome territories [@Bonev2016].
+TADs form clusters by their epigenomic type into A/B compartments, and coalescence of compartments in the same chromosome forms chromosome territories [@Bonev2016].
 
 ### Molecular mechanisms of TAD and loop formation
 
@@ -239,24 +248,24 @@ Initial comparative Hi-C studies identified several evolutionary breakpoints at
 TAD boundaries and hihglights a major role of conserved CTCF binding sites in facilitating conservation of TADs [@VietriRudan2015]. 
 However, it remains to be investigated systematically if TAD regions as a whole might be stable or disrupted by rearrangements during evolution and how this is associated to conserved or divergent transcriptional regulation between species. 
 
+
 ## Disruption of chromatin architecture in disease
 
 The insulating function of TADs restricting promoter-enhancer interactions [@Symmons2014] suggests that alternations of TAD structures may
-induce ectopic interactions between regulatory elements and genes in neighboring TADs, leading to gene dysregulation (Fig. \#ref(fig:EnhancerAdoption)). 
+induce ectopic interactions between regulatory elements and genes in neighboring TADs, leading to gene dysregulation (Fig. \@ref(fig:EnhancerAdoption)). 
 
 Several experiments of genetic manipulation of specific TAD boundaries can change the surrounding interaction patterns and thus affect the expression of nearby genes. After experimental deletion of a 58-kb region encompassing a TAD boundary in mouse ESC, interactions between adjacent TADs significantly increase and genes in neighboring TADs were upregulated [@Nora2012].
 More precise deletion or inversion of CTCF binding site at loop anchors in TAD boundaries altered local chromatin architecture and nearby gene expression [@Dowen2014; @Guo2015; @Narendra2015].
 
-The alternation of chromatin contacts upon TAD boundary disruptions
-leads to the question whether disrutpion of TADs could also be and mechansim of disease pathology. This hypothesis were initilay dirven by studying the etiology of the Liebernberg syndrome, in which an upper-limb malformation phenotype is casued by deletion in the vinicity of *PITX1* gene. *PITX1* becomes therby accessible to an enhancer with specific activity in lower-limb and was missexpressed in a corresponding mouse model [@Spielmann2012]. 
-An overlap of thes deletion with later identifed TAD boundaries lead to the hypothesis of an regulatory effect mechanism of boundary deletions referred to as enhancer adoption [@Spielmann2013a].
+The alternation of chromatin contacts upon TAD boundary disruptions leads to the question whether disruption of TADs could also be and mechanism of disease pathology. This hypothesis was initially discussed by studying the etiology of the Liebenberg syndrome, in which an upper-limb malformation phenotype is caused by a deletion in the vicinity of the *PITX1* gene. *PITX1* becomes thereby accessible to an enhancer with specific activity in lower-limb and was miss-expressed in a corresponding mouse model [@Spielmann2012]. 
+An overlap of this deletion with later identified TAD boundaries leads to the hypothesis of a regulatory effect mechanism of boundary deletions referred to as enhancer adoption [@Spielmann2013a].
 
-An association of TAD disrutpions with disease was first shown by computational analysis integrating TAD structures, with tissue specific enhancers, and large crhomosomal deletions associated with clinical phenotypes [@Ibn-Salem2014].
+An association of TAD disruptions with diseases was first shown by computational analysis integrating TAD structures, with tissue-specific enhancers, and large chromosomal deletions associated with clinical phenotypes [@Ibn-Salem2014].
 
-In this study, the Human Phenotype Ontology database [@Kohler2014] was used to relate the phenotypes of 922 deletion cases from the DECIPHER database [@Firth2009] to monogenic diseases associated with genes in or adjacent to the deletions. This was used to differntiate for each deletion case between two possible pathogenic effect mechanism that best explains the phenotypes observed in the patients. Many deletions could be explained by a gene dosage mechansim and haploinsufficiency of genes located within the deletion. 
-However, about 12 percent of cases could be best explained by a TAD boundary disruption and a specific combinations of tissue-specific enhancers and genes in adjacent TADs. 
-Importantly, randomization of phenotype data showed that this enhancer adaption mechanism was significantly more frequent then expected by chance [@Ibn-Salem2014].
-Therfore, this study shows for the first time an association of TAD disrutpiton with genetic diseases and highglight an regulatory effect mechansims of TAD disruption that need to be further investigated and has to be considered when interpreting the gentic variations in patient genomes.
+In this study, the Human Phenotype Ontology database [@Kohler2014] was used to relate the phenotypes of 922 deletion cases from the DECIPHER database [@Firth2009] to monogenic diseases associated with genes in or adjacent to the deletions. This was used to differentiate for each deletion case between two possible pathogenic effect mechanism that best explains the phenotypes observed in the patients. Many deletions were best explained by a gene dosage mechanism and haploinsufficiency of genes located within the deletion. 
+However, about 12 percent of cases were best explained by a TAD boundary disruption and specific combinations of tissue-specific enhancers and genes in adjacent TADs. 
+Importantly, randomization of phenotype data showed that this enhancer adaption mechanism was significantly more frequent than expected by chance [@Ibn-Salem2014].
+Therefore, this study shows for the first time an association of TAD disruption with genetic diseases and describes a regulatory effect mechanism of TAD disruptions that need to be further investigated and has to be considered when interpreting genetic variations in patient genomes.
 
 <!-- ---------------------------------------------------------------- -->
 ```{r EnhancerAdoption, fig.cap='(ref:EnhancerAdoption)', out.width='60%', fig.align='center'}
@@ -265,10 +274,10 @@ knitr::include_graphics("figures/GDE_vs_TDBD_v03.png")
 
 (ref:EnhancerAdoption) **Models of pathomechanisms by chromosomal deletions involving TAD disruption** In each panel, an exemplary deletion is shown as a red bar, a TDB is indicated with a black arrow, and genes associated with the phenotypes of the CNV patient are shown in blue, other genes in gray. Phenotypic abnormalities are represented as exemplary HPO terms (HP1, HP2 and HP3). Three tissue-specific enhancers are shown in (B) as black ovals. **(A)** Gene-dosage effect. A deletion leads to a reduction in the dosage of haplosensitive genes located within the CNV. The individual with the deletion has two phenotypic abnormalities (HP1, HP2) resulting from deletion of two haplosensitive genes. AMendelian disease related to mutations in the first gene is associated with HP1, and aMendelian disease related to mutations in the second gene is associated with HP2. **(B)** TAD boundary deletion and enhancer adoption. Removal of the topological domain boundary allows the tissue-specific enhancer inappropriately to activate a phenotypically relevant gene located adjacent to the deletion, a phenomenon that we refer to as enhancer adoption. In this case, the individual with the deletion has a phenotypic abnormality (HP3) that is also seen in individuals with a Mendelian disease related to a mutation in the gene adjacent to the deletion. Figure adopted from [@Ibn-Salem2014].
 
-
 Intersingly, these initial results are largly confirmed by very recent studies investigating structural variants that disrupt TADs and lead to ectopic gene expression in genetic diseases [@Lupianez2015; @Franke2016; @Redin2017] and cancers [@Northcott2014; @Hnisz2016; @Weischenfeldt2016]. This is discussed in more detial in secion \#ref(thesis-discussion).
 
-
+Together, these observations lead to the questions whether other types of structural variants, like translocations and inversions, could also disrupt TADs and regulatory interactions of genes.
+To analyze such a position effect, careful integration of diverse genomic and phenotypic data is needed. Computationally tools could predict the effect of rearrangement breakpoints on TAD disruption and potential regulatory effects on phenotypically relevant genes. This would improve molecular diagnoses of many patients with variants of unknown significance.
 
 ## Aims of this thesis
 The recent advances of genome-wide ligation proximity mapping revealed that 
