--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -114,6 +114,16 @@
  year = {2015}
 }
 
+@article{Berlivet2013,
+ author = {Berlivet, Soizik and Paquette, Denis and Dumouchel, Annie and Langlais, David and Dostie, Jos{\'{e}}e and Kmita, Marie},
+ doi = {10.1371/journal.pgen.1004018},
+ journal = {PLoS Genetics},
+ number = {12},
+ title = {Clustering of Tissue-Specific Sub-TADs Accompanies the Regulation of HoxA Genes in Developing Limbs},
+ volume = {9},
+ year = {2013}
+}
+
 @article{Berthelot2017,
  archiveprefix = {arXiv},
  arxivid = {10.1101/125435},
@@ -710,6 +720,17 @@
  year = {2005}
 }
 
+@article{Durinck2009b,
+ author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
+ doi = {10.1038/nprot.2009.97},
+ journal = {Nature protocols},
+ number = {8},
+ pages = {1184--1191},
+ title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt.},
+ volume = {4},
+ year = {2009}
+}
+
 @article{Durinck2009,
  author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
  doi = {10.1038/nprot.2009.97},
@@ -718,17 +739,6 @@
  pages = {1184--1191},
  publisher = {Nature Publishing Group},
  title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt},
- volume = {4},
- year = {2009}
-}
-
-@article{Durinck2009b,
- author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
- doi = {10.1038/nprot.2009.97},
- journal = {Nature protocols},
- number = {8},
- pages = {1184--1191},
- title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt.},
  volume = {4},
  year = {2009}
 }
@@ -1253,6 +1263,18 @@
  title = {Recurring genomic breaks in independent lineages support genomic fragility.},
  volume = {6},
  year = {2006}
+}
+
+@article{Hnisz2016a,
+ author = {Hnisz, Denes and Day, Daniel S. and Young, Richard A.},
+ doi = {10.1016/j.cell.2016.10.024},
+ journal = {Cell},
+ number = {5},
+ pages = {1188--1200},
+ publisher = {Elsevier},
+ title = {Insulated Neighborhoods: Structural and Functional Units of Mammalian Gene Control},
+ volume = {167},
+ year = {2016}
 }
 
 @article{Hnisz2016,
@@ -2131,6 +2153,18 @@
  title = {CTCF-mediated chromatin loops enclose inducible gene regulatory domains},
  volume = {17},
  year = {2016}
+}
+
+@article{Palstra2003,
+ author = {Palstra, Robert-Jan and Tolhuis, Bas and Splinter, Erik and Nijmeijer, Rian and Grosveld, Frank and de Laat, Wouter},
+ doi = {10.1038/ng1244},
+ journal = {Nature Genetics},
+ number = {2},
+ pages = {190--194},
+ publisher = {Nature Publishing Group},
+ title = {The $\beta$-globin nuclear compartment in development and erythroid differentiation},
+ volume = {35},
+ year = {2003}
 }
 
 @article{Parker2013,
