--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -154,7 +154,9 @@ Similar than A/B-compartments, these three structures correlate with epigenetic 
 
 However, TADs can also be divided further into smaller regions with stronger preferential interactions within them, which are often referred to as sub-TADs [@Phillips-Cremins2013]. They might correspond to contact domains which were later identified using high-resolution Hi-C [@Rao2014].
 While sub-TADs display the same self-association features as TADs with decreased contact frequencies across sub-TAD boundaries, sub-TADs seems to be less stable across different cell types and tissues and are stronger related to tissue-specific gene expression [@Berlivet2013; @Phillips-Cremins2013]. 
-Smaller structural units within TADs were also reported from studies CTCF and cohesin mediated interactions using ChiA-PET [@Dowen2014; @Hnisz2016a]
+Smaller structural units within TADs were also reported from studies of CTCF and cohesin mediated interactions using ChiA-PET [@Dowen2014]. Chromatin loops anchored 
+at CTCF and cohesin binding sites span genomic regions described as insulated neighborhoods  that restict enhancer-promoter interactions [@Hnisz2016a]. 
+Perturbations of anchor regions by naturally occuring or or experimentally induced mutations lead to dysregulation of enclosed genes [@Dowen2014; @Hnisz2016; @Ji2016]
 
 
 - long distnace between regulatory regions and genes in vertebrate genes
@@ -162,14 +164,16 @@ Smaller structural units within TADs were also reported from studies CTCF and co
 To function as a transcriptional regulator an enhancer needs to be brought into close spatial proximity with its target promoter through chromatin looping.
 For example, the enhancers of the $\beta$-globin gene interact strongly with its target gene via long-range chromatin contacts in erythroid cells where the $\beta$-globin gene is active but shows little or no interactions in cells from different lineages [@Palstra2003].
 
-Recent studies provide functional insights into how chromatin loops are
-formed and highlight the role of architectural proteins such as CTCF and
-cohesin [@Merkenschlager2016]. CTCF recognizes a specific sequence motif, to which it binds with high affinity [@Kim2007; @Nagy2016]. Interestingly, CTCF motifs are present in convergent orientation at chromatin loop anchors
-[@Rao2014; @Tang2015; @VietriRudan2015]. Furthermore, experimental inversion of the motif results in changes of loop formation and altered gene expression [@Guo2015; @deWit2015].
-Polymer simulations and experimental perturbations led to a model of
+High-resolution proximity ligation techniques enabled to measure genome-wide pairwise interactions that interact significantly more frequently than background interactions. 
+Chromatin loops can be broadly divided into two types, constitutive or architectural loops and cell type-specific loops [@Yu2016].
+Constitutive loops are largely invariant across cell types and demarcate TAD or sub-TAD boundaries [@Dowen2014; @Ji2016; @Phillips-Cremins2013] and are often formed by CTCF and cohesin complexes [@Rao2014]. CTCF recognizes a specific DNA sequence motif, to which it binds with high affinity [@Kim2007; @Nagy2016]. Interestingly, CTCF motifs are present in convergent orientation at chromatin loop anchors
+[@Rao2014; @Tang2015; @VietriRudan2015]. Furthermore, experimental inversion of the motif results in changes of loop formation and altered gene expression [@Guo2015; @deWit2015; @Sanborn2015].
+Polymer simulations together with perturbation experiments led to a model of
 loop extrusion, in which loop-extruding factors, such as cohesin, form
 progressively larger loops but stall at CTCF binding sites in convergent
-orientation [@Sanborn2015; @Fudenberg2016]. According to these models, CTCF binding sites can function as anchors of chromatin loops.
+orientation [@Sanborn2015; @Fudenberg2016]. 
+
+Another type of chromatin loops is enhancer-promoter interactions. 
 
 In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
 These engage in long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the formation of TADs.
