add pandoc version to travis yml

--- a/06-discussion.Rmd
+++ b/06-discussion.Rmd
@@ -17,6 +17,7 @@
     - This data can be computationally integrated with one-dimensional measurements along the genome
 and lead to exciting findings of higher order organisation. 
     - TADs are not only structural units of chromosomes, but also functional building blocks of genomes.
+    - Discuss [@Liu2016b] Evidence of reduced recombination rate in human regulatory domains
 
 ## Discussion paralog co-regulation in TADs
 
